--- a/Perceptron_Simples.ipynb
+++ b/Perceptron_Simples.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN9v0w+olQDDJEAqoP1TE+A",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMMcWES3I4cS954315I3ZjQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +35,10 @@
         "\r\n",
         "Leandra Dhenneyse - 20190081329\r\n",
         "\r\n",
-        "* O exemplo utilizado será a divisão de maçãs e laranjas de acordo com o pH.\r\n",
+        "* O Perceptron irá aprender a classificar maçãs e laranjas através das informações de peso e pH.\r\n",
+        "\r\n",
+        "Maçã = -1\r\n",
+        "Laranja = 1\r\n",
         "\r\n"
       ]
     },
@@ -47,10 +51,10 @@
         "#Importar biblioteca\r\n",
         "\r\n",
         "import numpy as np\r\n",
-        "import matplotlib.pyplot as plt\r\n",
+        "\r\n",
         "#Numero de épocas (ciclos) e amostras\r\n",
         "\r\n",
-        "epocas = 70000\r\n",
+        "epocas = 70000 # primeiro teste com 10000 \r\n",
         "amostras = 6\r\n"
       ],
       "execution_count": 75,
@@ -66,6 +70,7 @@
         "peso = np.array([113, 122, 107, 98, 115, 120])\r\n",
         "ph = np.array ([ 6.8, 4.7, 5.2, 3.6, 2.9, 4.2])\r\n",
         "\r\n",
+        "#bias unitário\r\n",
         "bias = 1\r\n"
       ],
       "execution_count": 76,
@@ -79,20 +84,21 @@
       "source": [
         "#Perceptron\r\n",
         "\r\n",
-        "X = np.vstack ((peso, ph))\r\n",
+        "X = np.array ([peso, ph])\r\n",
         "Y = np.array ([-1, 1, -1, -1, 1, 1])\r\n",
         "\r\n",
         "#Taxa de aprendizado\r\n",
         "\r\n",
         "eta = 0.1\r\n",
         "\r\n",
-        "#Definir o vetor de pesos\r\n",
-        "#3 colunas, duas entradas + bias\r\n",
-        "W = np.zeros ([1, 3])\r\n",
-        "\r\n",
         "#Definir matriz para armazenar os erros\r\n",
         "\r\n",
         "e = np.zeros(6)\r\n",
+        "\r\n",
+        "#Definir o vetor de pesos\r\n",
+        "#3 colunas, duas entradas + bias\r\n",
+        "W = np.ones ([1, 3])\r\n",
+        "\r\n",
         "\r\n",
         "#Função degrau\r\n",
         "\r\n",
@@ -110,7 +116,7 @@
         "\r\n",
         "      V = np.dot(W, Xb)\r\n",
         "\r\n",
-        "#Resultado perceptron\r\n",
+        "#Saída do perceptron\r\n",
         "\r\n",
         "      Yr = funcaoativacao (V)\r\n",
         "\r\n",
@@ -119,7 +125,7 @@
         "\r\n",
         "e[k] = Y[k] - Yr\r\n"
       ],
-      "execution_count": 77,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -132,7 +138,7 @@
         "\r\n",
         "W = W + eta * e[k] *Xb"
       ],
-      "execution_count": 78,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -142,18 +148,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZkCSVZmuGhPs",
-        "outputId": "703a260b-e79d-4832-c292-e89e6b2e9c8a"
+        "outputId": "2bac28e6-8a80-4047-9ed6-3a4e53e47c58"
       },
       "source": [
         "\r\n",
-        "print (\"Vetor de erros (e) = \" + str(e))\r\n"
+        "#Caso o resultado do vetor de erros sejam zeros, as classes foram separadas perfeitamente. \r\n",
+        "#Caso não, aumentar o número de épocas para verificar a melhora do resultado.\r\n",
+        "print (\"Vetor de erros (e) = \" + str(e))\r\n",
+        "\r\n"
       ],
-      "execution_count": 79,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Vetor de erros (e) = [0. 0. 0. 0. 0. 2.]\n"
+            "[[1. 1. 1.]]\n",
+            "Vetor de erros (e) = [0. 0. 0. 0. 0. 0.]\n"
           ],
           "name": "stdout"
         }
